post(algorithm): leetcode286 update

--- a/_posts/Algorithm/leetcode/2022-09-21-leetcode286.md
+++ b/_posts/Algorithm/leetcode/2022-09-21-leetcode286.md
@@ -14,14 +14,17 @@ date: 2022-09-21
 last_modified_at: 2022-09-21
 ---
 
+# Problem:
+**source**: [walls-and-gates](https://leetcode.com/problems/walls-and-gates/)
+
 ## Identify problem
 Given a 2d grid each filled with either -1(wall), 0(gate),or INF(empty room), question asked us to fill in all the empty rooms with shortest distance to the gate.  
 
 ## Approaches
 
-1. We could use dfs for individual indicies. For each room, we could consecutively look for rooms that are adjacent to current room of investigation and find whether we have reached to gate. This solution however takes $O((row of rooms * colume of rooms)^2)$ time complexity
+1. **We could use dfs for individual indicies.** For each room, we could consecutively look for rooms that are adjacent to current room of investigation and find whether we have reached to gate. This solution however takes $O((row of rooms * colume of rooms)^2)$ time complexity
 
-2. Use bfs starting from all the gates simultaneously. Using queues to track all the visited rooms, we would be able to fill up the empty rooms with distance in $O($row of rooms * colume of rooms)$)$ time complexity.
+2. **Use bfs starting from all the gates simultaneously.** Using queues to track all the visited rooms, we would be able to fill up the empty rooms with distance in $O($row of rooms * colume of rooms)$)$ time complexity.
 
 
 ## Code
