post(algorithm): leetcode210

--- a/_posts/Algorithm/leetcode/2022-09-21-leetcode207.md
+++ b/_posts/Algorithm/leetcode/2022-09-21-leetcode207.md
@@ -95,4 +95,5 @@ public:
 
 ## Notes
 
-We could also use [kahn's algorithm](https://www.youtube.com/watch?v=cIBFEhD77b4)
+- We could also use [kahn's algorithm](https://www.youtube.com/watch?v=cIBFEhD77b4)
+- leetcode 210 - course schedule II is similar question that uses topological sort.
