post: update std::bind

--- a/_posts/Cpp/cpp/2022-12-19-bind.md
+++ b/_posts/Cpp/cpp/2022-12-19-bind.md
@@ -124,4 +124,5 @@ void print(T i, const std::string& s)
 ```
 
 ## Notes
-Since bind returns callable things, we could pass the result into `std::function<void (const std::string&, int)> f2(f);`
+- Since bind returns callable things, we could pass the result into `std::function<void (const std::string&, int)> f2(f);`
+- Also try to <span style="color:red">avoid using std::bind</span> since lamda has better compile time, runtime, memory usage..
