--- a/_posts/Computer Graphics/2022-12-20-2d_array.md
+++ b/_posts/Computer Graphics/2022-12-20-2d_array.md
@@ -3,7 +3,7 @@ title:  "2D arrays"
 excerpt: "Using 2D arrays as if it was 1D array"
 
 categories:
-  - graphics
+  - Computer Graphics
 tags:
   - [cpp]
 
@@ -15,7 +15,7 @@ last_modified_at: 2022-12-20
 mathjax: true
 ---
 
-Even though 2D is good for finding the surrounding index of the current index of investigation, 1D array is fast most of the time(due to better cache locality and more ...).
+Even though 2D array is good for finding the surrounding index for the current index of investigation, a 1D array is fast most of the time(due to better cache locality and more ...).
 
 <figure class="full">
     <a href="/assets/images/posts/graphics/2022-12-20-20-30-50.png"><img src="/assets/images/posts/graphics/2022-12-20-20-30-50.png"></a>
@@ -24,3 +24,18 @@ Even though 2D is good for finding the surrounding index of the current index of
 
 
 Given 2D index (i, j), its 1D index could be formulated as `i + width*j`
+
+## Example
+```cpp
+
+for(int j=0; j<image.height; ++j)
+{
+  for(int i=0; i<iamge.width; ++i)
+  {
+    img.pixels[i+image.width*j].v[0] = std::clamp(image.pixels[i+image.width*j]*0.88f, 0.0f, 1.0f);
+    img.pixels[i+image.width*j].v[1] = std::clamp(image.pixels[i+image.width*j]*0.88f, 0.0f, 1.0f);
+    img.pixels[i+image.width*j].v[2] = std::clamp(image.pixels[i+image.width*j]*0.88f, 0.0f, 1.0f);
+  }
+}
+
+```
