fix: image not showing up

--- a/_posts/Algorithm/leetcode/2022-09-21-leetcode207.md
+++ b/_posts/Algorithm/leetcode/2022-09-21-leetcode207.md
@@ -24,7 +24,7 @@ Given the number of courses that needs to be take and their pre-requisite relati
 
 From the given pre-requisite relationship we could form a graph relationship as following.
 <br>
-![image]({{ site.url }}{{ site.baseurl }}/_posts/Algorithm/leetcode/images/2022-09-21-14-24-40.png)
+![image](/assets/images/posts/Algorithm/leetcode/2022-09-21-14-24-40.png)
 <br>
 in this diagram 0 is pre-requisite of 1. 
 
