--- a/_posts/Others/2023-01-29-4.md
+++ b/_posts/Others/2023-01-29-4.md
@@ -1,3 +1,20 @@
+---
+title:  "Basic Relational Algebra"
+excerpt: "ignoring warning in third party library in cmake"
+
+categories:
+  - others
+tags:
+  - [Relational Algebra]
+
+toc: true
+toc_sticky: true
+
+date: 2022-01-22
+last_modified_at: 2022-01-22
+mathjax: true
+---
+
 Query(expression) on set of relations produces relation as a result 
 
 Example: simple college admissions database
